--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,20 @@
 {
-  "name": "JBN",
   "short_name": "JBN",
-  "description": "JBN",
-  "start_url": "https://harborsalt.com/steven",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#000000",
+  "name": "J Barbosa Neves",
   "icons": [
-    {
-      "src": "jneves2.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "jneves2.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+      {
+          "src": "jneves2.png",
+          "type": "image/png",
+          "sizes": "192x192"
+      },
+      {
+          "src": "jneves2.png",
+          "type": "image/png",
+          "sizes": "512x512"
+      }
+  ],
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#000000"
 }
