--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
-  "short_name": "JBN",
-  "name": "J Barbosa Neves",
+  "name": "JBN",
+  "short_name": "JNB",
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "icons": [
       {
           "src": "jneves2.png",
-          "type": "image/png",
-          "sizes": "192x192"
+          "sizes": "192x192",
+          "type": "image/png"
       },
       {
           "src": "jneves2.png",
-          "type": "image/png",
-          "sizes": "512x512"
+          "sizes": "512x512",
+          "type": "image/png"
       }
-  ],
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#000000"
+  ]
 }
