--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "JBN",
-  "short_name": "JNB",
+  "name": "J Barbosa Neves",
+  "short_name": "JBN",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#000000",
