--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#000000",
   "icons": [
       {
-          "src": "justinglitch.png",
+          "src": "justinvector.png",
           "sizes": "192x192",
           "type": "image/png"
       },
       {
-          "src": "justinglitch.png",
+          "src": "justinvector.png",
           "sizes": "512x512",
           "type": "image/png"
       }
