--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "JBN",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#000000",
+  "background_color": "#1e1e1e",
+  "theme_color": "#1e1e1e",
   "icons": [
       {
           "src": "justinvector.png",
